fix: configure api-gateway CORS and remove duplicate CORS configurations from auth-service and conversion-service